Working on DietProductShowActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,9 @@
 
     <string name="grams">Ilość gramów</string>
 
+    <string name="options">Opcje</string>
+
+
 
     <string name="button_register">Rejestracja</string>
     <string name="loading">Ładowanie</string>
