Working on TrainingActivity. Implemented textWatchers to EditTexts.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,12 @@
     <string name="notes">Notes:</string>
 
 
+
+    <string name="no_empty">Nie może być puste</string>
+
+
+
+
     <string name="training_details">Opis ćwiczenia:</string>
 
     <string name="show">Pokaż</string>
