--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -132,5 +132,7 @@
     <string name="image">Obrazek prezentujący początkową fazę ruchu</string>
     <string name="image1">Obrazek prezentujący końcową fazę ruchu</string>
     <string name="lifted">Podniesiono</string>
+    <string name="time_example">01:30</string>
+    <string name="X">X</string>
 
 </resources>
