Working on better look of TrainingDetailsActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -136,5 +136,6 @@
     <string name="X">X</string>
     <string name="set">Seria</string>
     <string name="reps_long">Powtórzenia</string>
+    <string name="description">Opis</string>
 
 </resources>
