Added TextWatcher to TrainingDetailsActivity and validation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,5 +137,6 @@
     <string name="set">Seria</string>
     <string name="reps_long">Powtórzenia</string>
     <string name="description">Opis</string>
+    <string name="limit">Limit</string>
 
 </resources>
