--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,5 +140,7 @@
     <string name="description">Opis</string>
     <string name="limit">Limit</string>
     <string name="calories_main">kalorii</string>
+    <string name="gym">Siłownia</string>
+    <string name="time_on_gym">Czas na siłowni</string>
 
 </resources>
