--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,6 @@
     <string name="title_activity_user_login">UserLoginActivity</string>
 
 
-
-
     <string name="fitx">FiTX Fitness Assistant</string>
     <string name="title_activity_settings">Settings</string>
     <string name="title_activity_main">FiTX/Main</string>
@@ -54,7 +52,6 @@
     <string name="weight_example">Przykład: 50.60.65.70.70</string>
 
     <string name="notes">Notes:</string>
-
 
 
     <string name="no_empty">Nie może być puste</string>
@@ -147,5 +144,9 @@
     <string name="cardio">Cardio</string>
     <string name="burned">spalono</string>
     <string name="minutes_on_cardio">Minuty</string>
+    <string name="row_diet">Diet</string>
+
+    <string name="training_gym">gym</string>
+    <string name="training_cardio">cardio</string>
 
 </resources>
