--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="kg_short">kg</string>
     <string name="t_short">t</string>
 
+    <string name="rotate_body">Obróć 180°</string>
 
     <string name="rotate">Obrót</string>
     <string name="body_front">Ciało przód</string>
