--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -230,5 +230,10 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
+    <string name="reps_long1">powtórzeń</string>
+    <string name="kg_long">kilogramy</string>
+    <string name="reps_short1">powt.</string>
+    <string name="add_set">Dodaj serię</string>
+    <string name="timer">Timer</string>
 
 </resources>
