--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -239,5 +239,7 @@
     <string name="welcome_new_user">Witamy nowego użytkownika</string>
     <string name="welcome_again">Witaj ponownie</string>
     <string name="connection_error">Błąd połączenia</string>
+    <string name="password">Hasło</string>
+    <string name="username">Nazwa użytkownika</string>
 
 </resources>
