--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -241,5 +241,8 @@
     <string name="connection_error">Błąd połączenia</string>
     <string name="password">Hasło</string>
     <string name="username">Nazwa użytkownika</string>
+    <string name="weight1">Waga</string>
+    <string name="added">Dodano</string>
+    <string name="data_example">2018.09.10</string>
 
 </resources>
