Refactoring SettingsActivity and removing unnecessary classes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -263,4 +263,6 @@
     <string name="calories_consumed">Spożyte kalorie</string>
     <string name="calories_limit">Limit kalorii</string>
     <string name="updated">Zaktualizowano</string>
+    <string name="settings_user_goal">Twój cel</string>
+    <string name="settings_user_goal_description_short">Obierz cel a program przeliczy za Ciebie automatycznie kalorie</string>
 </resources>
