Adding title to activity_register.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -279,4 +279,5 @@
     <string name="man">Mężczyzna</string>
     <string name="woman">Kobieta</string>
     <string name="birthday_format">DD.MM.RRRR</string>
+    <string name="register_user">Rejestracja użytkownika</string>
 </resources>
