--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -275,4 +275,5 @@
     <string name="diet_ratio">Stosunek makroskładników</string>
     <string name="diet_ratio_description_short">Stosunek Białko:Tłuszcze:Węgle</string>
     <string name="something_went_wrong">Coś poszło nie tak, nie zapisano danych</string>
+    <string name="diet_ratio_enter_proper_data">Suma wszystkich makroskładników musi wynosić 100</string>
 </resources>
