--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -272,6 +272,9 @@
     <string name="no_data">Brak danych</string>
     <string name="diet_title">Dieta</string>
     <string name="training_title">Trening</string>
+    <string name="diet_ratio">Stosunek makroskładników</string>
+    <string name="diet_ratio_description_short">Stosunek Białko:Tłuszcze:Węgle</string>
+    <string name="diet_ratio_enter_proper_data">Suma wszystkich makroskładników musi wynosić 100</string>
     <string name="userRealName">Imię</string>
     <string name="email_address">Adres email</string>
     <string name="password_retype">Powtórz hasło</string>
