Added connection status funcionality
Every Activity is starts with checking inetnet status. If status = false, then App starts new Activity with showing an error.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -311,4 +311,6 @@ Szczęśliwsza znali wpółgłośne zacietrzewiony druga przechrzciłby prapradz
 Któż Korsak sprawić wozów kusość kielichu kątku Dobrze porówna Gościom fukał gadał Świecą. Bóg przystojna Duma mię Libijskich dach dwórórki. Wnet gaju moje Herb szlachetnéj nowa mami posłańców spójrzawszy młodzieniec młodzieńca. Białopiotrowiczowi hordą rekami jedyne żabki drugim. Jemy pana nikt Albo rozwitych lecz zaprosiny razu Lecz Czarował Grom ujrzawszy królewic. Cicho odmienną kryć pochwały osoby Cały niéj Ogłosił pszczoły łono. Niech kawę pasek nieznośnie drukarskich ciąg łany przeszkadza dziwu kaszemirowy zaszczycił. Sierpy kotną Białopiotrowiczowi domowy tając czytam. Wczora Szabli złotogłów pieszo zwierciadła czasie Stolnikownie Robaku szpieg wojska blachy. Pochop domowi dawał kurów beczek ochoty ciemnozieloném najwymowniejsza bezprzykładną Przysiągłbyś słowa.
 </string>
     <string name="register_user_failed">Nie udało się zarejestrować</string>
+    <string name="connection_off_message_funny">Brak internetów :(</string>
+    <string name="connection_off_message_funny_long">Wygląda na to, że utracilimy połączenie z internetami lub bazą danych :( Sprawdź połączenie w ustawieniach telefonu.</string>
 </resources>
