--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -290,28 +290,40 @@
 
 
 
-    <string name="long_text_example">Niźli Dunaju niepowiedziała kiedym szkody ciemnozieloném Rzekł szedł spokojniejszych Bezładnością skroń. Bór izby dnia oczu rogi Nilu niezdradzić angielskiéj tylu złotogłów nowo. Marszałkowską alkowy Przysiągłbyś Wojski sprawa blachy dowoli ciemnozieloném Dojeżdżaczowi niepowiedziała twarze. Trąby młody pomrok gazety. Byłem ogrodu Przedstawiając sejmik Przysiągłbyś Dojeżdżaczowi Worończańskim wojsku bezprzykładną murach żwawo mylił osobna. Zwrócona Chart Latem Łowczego Szmer więdliny pajęczą wzdychać śmietana Musim koło.
-
-Lubi rostargnionv ludu dojeżdżacz ochmistrzyni nauczycielem najbliższą nięprzybył Albo szal. Ruszy najwymowniejsza ciemnozieloném marszałkowską dymem zyska Worończańskim parę Zatem nigdy senny. Nisko trzykrólskie Mickiewiczów tłum nadzwyczajnie rozum czemu gniew Podniesionemi Przyjechawszy. Pianiu wielka jakoby Śród Mościwego stercząca uciszając brzegu zaszyt byłem siedziały czerwoném stołu kołnierzy. Można Najpiękniejszego innego zwolna Rzeczypospolitéj Wąsal żmija szkody znikli najpiękniejszéj. Lasem Krzyk kłótnia kichnął adwokatem sercu przydatku oknie Newą. Przeciwne smutno plecie służyć kłaniał gałeczki miało złoty Rejtanowi wielcy płynu uśmiechu. Przyjechawszy śmiertelnego udać kraty sień Napełniając gromi szlacheckiemi mieni Owoż kąty skarb. Rozprawiali Wyczha tajnie Poprawiała myśliwskie posłyszał ugania wojnie słonecznik wojsku cztery szlacheckim.
-
-Ogonie Polsce gąsienice Napoleonem mimojazdem czapla urzędnika blachy zmieścić muchom pieniędzy. Słównych ściskała jakim damom Niewiadomo Panny dzwoniące wyciągał poglądał niéj prosi. Wodę sług najstraszniéj gazet Owoż lubą ubóstwiałbym ostre Zamek nieszczęście karę nieprzyjaciele. Trzykrólskie honoru osobki kiedym człek przestraszone przestraszeni nauką Wojski stoła Przywoławszy Podkomorzanki gdzieniegdzie Słowo. Miasta Nosił Hrabia znikli Dojeżdżaczowi witali rosciągnionych zając Wystrzeliliśmy Przedstawiając ubrać niepowiedziała ubiory. Rzeczypospolitéj Najpiękniejszego pali Bogu Czas wiek najpiękniejszéj. Uszy wał wnet bór Dał koń daje.
-
-Dwie opowiadań złośliwe Wiec niewielkim podjechał przynoszą świeciło mowy Jéj albo Usta. Wyżółkłych nieuszanowanie umiał rzeźbiarstwie niedźwiedziem maków żmija szarak ogonem. Samotnym Trzy kula był stoi Ojczyzny Adjutant starcowi każdéj pobożny. Żołniersczyzny drzwi nierostrzygniony ubior kitę szmer pół Kościuszkowskie najpiękniejszym Niesiołowskiemu Musim. Zaszyt gadać nauką koryta. Szyb młodzieniec zostawioném piki bawi dał Bernatowicze wami mami wola. Położył Grad czem przyjścia Mój lisa kołnierze mych wraz dziesięć książką woda usty.
-
-Nieodstąpił Przysiągłem myśliwskiém Trudno konstytuować męża Dozoru wstydu. Okna lewo nosi Już cary rodu czym. Szlachecki ochoty dworze obrali Brzemienna Cesarz twarog malowanych. Wicin gniew opoka druga Białopiotrowiczowi zaraz czyli Zgoda. Najpiękniejszego najpiękniejszéj pewni Rzeczypospolitéj kwita były blask. Ręką włók opieki wielcy Upiera Szabli Białopiotrowiczem. Ławy szyte rodzi Grał Zakończyła Podkomorzemu pewny dolne pośpieszył.
-
-Trzeci wozów strzały otworu szepcąc górują gadać dobrym złość strojach rogów stanie nadzieje. Woń Pójdziemy pól Nikt Powtarzał ucha Kupiskiém. Okno tego Bóg jaki zwierciadeł woda lata pończochach politycznych pocałowanie przychodził. Białopiotrowiczowi dworem rydzem badyle dzieci szabli. Też byle jako szli ojczystą pali garnuszek Albo Wara Podnosił nań Bonaparta urzędów. Morzu obierzcie dacza nietrudno godna konno osoba powieść bieliznę wyrok. Pewna czyli lekka łabędzią niestracił kilkn innym zgromadzona pijem szczwaczów przezierać. Duszę szacie Białopiotrowiczowi miejsc krucze wiodł. Użyć cierpi przychodził koryta dwadzieścia powoli nauczycielem gadano zrobim niéma rzekł. Kusego dworze anioł pasach jakże który bezprzykładną spokojniejszych zwierciadlanéj dojeżdżaczów nowiny.
-
-Murze ptaki stara kraty dobra spłonęła dawni niewierzył psami rozsądkiem pukle. Ustawicznie siadł zginą największa probie lubił przesądów ważniejsze zabawy pozwoleniem Zwierz. Szczęśliwsza Wielki dosyć Sokoł przyciągnąć prapradziadów francuszczyzny najdawniejszym miłą opieki. Tyki obejrzał cichszych pomiędzy dnia odmienił pośrodku polowanie nikt noty. Kątku Rzeczypospolitéj Najpiękniejszego pieski najpiękniejszéj domów gromie szmery każda. Nierostrzygniony daleko dziwne najpiękniejszym wymowy Kościuszkowskie Dziwna blisko żołniersczyzny miało pijani zaszyt. Ręką świątyń przedział wróżyło ranną domowe Jedną wystrzały męczarnie. Wina woń tych tylu bezprzykładną rosciągnionych Bezładnością pokrewieństwem Nogi nogi najwymowniejsza Jego.
-
-Obcéj obrał pokój ożył szpady. Borsuk pożar Hreczeszance żywot która dojeżdżacz grzeczności smutek naprzykrzona niedźwiedź zwadę. Najpiękniejszego kielni trzoda tając liść szyję indyki jadła najpiękniejszéj Rzeczypospolitéj bogaty. Nierozwity Daleki stopą zacnie napełnił gęsto nabyliśmy godnie. Wystrzeliliśmy ważą dawną Dunaju przejrzystość zwała łotra dojeżdżaczów piersi. Dojeżdżaczy czym pole Wykrzykników Przynajmniéj rozłożystym inni śmiertelnego Taka zapowiedział gaje. Duszę darował Dowiodę łzach rumaki pasach pręgi czernił wyznania prędzej. Zaszyt włożywszy niecne strony dżumy rozmyślał Koszyk suknie powinność.
-
-Szczęśliwsza znali wpółgłośne zacietrzewiony druga przechrzciłby prapradziadów mknie niezwyczajnéj nogą. Prócz powiem Białopiotrowiczowi potém kobiet. Tém pokrewieństwem grom marszałkowską woda przejrzystość dojeżdżaczów najwymowniejsza Grom. Duma Bernardyńskie nieuszanowanie uczy Bóg odpowiedziéć szczególniéj gaju. Napoleonem Pójdziemy król kitę ozoru szczodroty wdzięczne lamus nasze. Nazywano grząd brzmiał ogrodu skupiły oknach zdały srożéj robota rozerwie Wyezha skowycze. Komu Niesiołowskiemu uszy Byle Kościuszkowskie tuż najpiękniejszym boru. Złoty gadać Białopiotrowiczem Carski badyle Żuraw można. Konstytuować damach witali bezprzytomnie dotychczasowa Kurtę blizny książkowéj Muszę Ściągnęły Śród kartą Wyprowadzają stopą.
-
-Któż Korsak sprawić wozów kusość kielichu kątku Dobrze porówna Gościom fukał gadał Świecą. Bóg przystojna Duma mię Libijskich dach dwórórki. Wnet gaju moje Herb szlachetnéj nowa mami posłańców spójrzawszy młodzieniec młodzieńca. Białopiotrowiczowi hordą rekami jedyne żabki drugim. Jemy pana nikt Albo rozwitych lecz zaprosiny razu Lecz Czarował Grom ujrzawszy królewic. Cicho odmienną kryć pochwały osoby Cały niéj Ogłosił pszczoły łono. Niech kawę pasek nieznośnie drukarskich ciąg łany przeszkadza dziwu kaszemirowy zaszczycił. Sierpy kotną Białopiotrowiczowi domowy tając czytam. Wczora Szabli złotogłów pieszo zwierciadła czasie Stolnikownie Robaku szpieg wojska blachy. Pochop domowi dawał kurów beczek ochoty ciemnozieloném najwymowniejsza bezprzykładną Przysiągłbyś słowa.
+    <string name="long_text_example">I.	Definicje:\n
+Użyte w Regulaminie pojęcia oznaczają:\n\n
+1.	Klient – osoba fizyczna, osoba prawna lub jednostka organizacyjna nie będącą osobą prawną, której przepisy szczególne przyznają zdolność prawną, która dokonuje zakupów w aplikacji FiTX;\n\n
+2.	Kodeks Cywilny – ustawa z dnia 23 kwietnia 1964 r. (Dz. U. Nr 16, poz. 93 ze zm.);\n\n
+3.	Regulamin – niniejszy Regulamin świadczenia usług drogą elektroniczną w ramach aplikacji mobilnej FiTX;\n\n
+4.	Aplikacja mobilna – serwis internetowy dostępny na Sklep Play, za pośrednictwem którego Klient może w szczególności monitorować jakość swojej diety i treningów;\n\n
+5.	Usługi – usługi prezentowane w Aplikacji Mobilnej;\n\n
+6.	Umowa sprzedaży – umowa sprzedaży Usług w rozumieniu Kodeksu Cywilnego, zawarta pomiędzy FiTX a Klientem, zawierana z wykorzystaniem serwisu Aplikacji Mobilnej;\n\n
+7.	Ustawa o świadczeniu usług drogą elektroniczną – ustawa z dnia 18 lipca 2002 r. o świadczeniu usług drogą elektroniczną (Dz. U. Nr 144, poz. 1204 ze zm.);\n\n
+\n\n
+II.	Postanowienia ogólne:\n
+1.	Niniejszy Regulamin określa zasady korzystania z Aplikacji Mobilnej dostępnej na platformie Android Play.\n\n
+2.	Niniejszy Regulamin jest regulaminem, o którym mowa w art. 8 Ustawy o świadczeniu usług drogą elektroniczną.\n\n
+3.	Aplikacja mobilna, działająca na platformie Android, prowadzony przez Łukasza Krawczaka.\n\n
+4.	Niniejszy Regulamin określa w szczególności:\n\n
+\t\ti.	Zasady dokonywania rejestracji i korzystania z konta w ramach aplikacji mobilnej;\n\n
+\t\tii.	Warunki i zasady składania drogą elektroniczną Zamówień w ramach Aplikacji Mobilnej;\n\n
+5.	W celu korzystani z Aplikacji Mobilnej Klient powinien we własnym zakresie uzyskać dostęp do Urządzenia Mobilnego z dostępem do Internetu.\n\n
+6.	Klient zobowiązany jest w szczególności do:\n\n
+\t\ti.	Niedostarczania i nieprzekazywania treści zabronionych przez przepisy prawa, np. treści propagujących przemoc, zniesławiających lub naruszających dobre osobiste i inne prawa osób trzecich,\n\n
+\t\tii.	Korzystanie z Aplikacji Mobilnej w sposób niezakłócający jego funkcjonowanie, w szczególności poprzez użycie określonego oprogramowania lub urządzeń,\n\n
+\t\tiii.	Niepodejmowanie działań takich jak: rozsyłanie lub umieszczanie w ramach Aplikacji Internetowej niezamówionej informacji handlowej (spam),\n\n
+\t\tiv.	Korzystanie z Aplikacji Mobilnej w sposób nieuciążliwy dla innych klientów oraz dla Łukasza Krawczaka,\n\n
+\t\tv.	Korzystanie z wszelkich treści zamieszczonych w ramach Aplikacji Mobilnej jedynie w zakresie własnego użytku osobistego,\n\n
+\t\tvi.	Korzystanie z Aplikacji Mobilnej w sposób zgodny z przepisami obowiązującego na terytorium Rzeczypospolitej Polskiej prawa, postanowienia Regulaminu, a także z ogólnymi zasadami korzystania z sieci Internetowej.\n\n
+III.	Postanowienia końcowe\n
+1.	Rozstrzyganie ewentualnych sporów powstałych pomiędzy FiTX a Klientem, który jest konsumentem w rozumieniu art. 22[1] Kodeksu Cywilnego, zostaje poddane sądom właściwym zgodnie z postanowieniami właściwych przepisów Kodeksu postępowania cywilnego.\n\n
+2.	Rozstrzyganie ewentualnych sporów powstałych pomiędzy FiTX a Klientem, który nie jest konsumentem w rozumieniu art. 22[1] Kodeksu Cywilnego, zostaje poddane sądom właściwym zgodnie z postanowieniami właściwych przepisów Kodeksu postępowania cywilnego.\n\n
+3.	W sprawach nieuregulowanych w niniejszym Regulaminie mają zastosowanie przepisy Kodeksu Cywilnego, przepisy Ustawy o świadczeniu usług drogą elektroniczną oraz inne właściwe przepisy prawa polskiego.\n\n
+4.	W przypadku aktualizacji Regulaminu Klient zostanie poinformowany drogą elektroniczną o jego przerobieniu.\n\n
 </string>
     <string name="register_user_failed">Nie udało się zarejestrować</string>
     <string name="connection_off_message_funny">Brak internetów :(</string>
     <string name="connection_off_message_funny_long">Wygląda na to, że utracilimy połączenie z internetami lub bazą danych :( Sprawdź połączenie w ustawieniach telefonu.</string>
     <string name="content_refresh">Odświeżam</string>
+    <string name="error_bad_username_or_password">Zła nazwa użytkownika lub hasło</string>
 </resources>
