--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="title_activity_user_login">UserLoginActivity</string>
 
 
-    <string name="fitx">FiTX Fitness Assistant</string>
+    <string name="fitx">FiTX</string>
     <string name="title_activity_settings">Settings</string>
     <string name="title_activity_main">FiTX/Main</string>
 
