--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -307,7 +307,7 @@ II.	Postanowienia ogólne:\n
 4.	Niniejszy Regulamin określa w szczególności:\n\n
 \t\ti.	Zasady dokonywania rejestracji i korzystania z konta w ramach aplikacji mobilnej;\n\n
 \t\tii.	Warunki i zasady składania drogą elektroniczną Zamówień w ramach Aplikacji Mobilnej;\n\n
-5.	W celu korzystani z Aplikacji Mobilnej Klient powinien we własnym zakresie uzyskać dostęp do Urządzenia Mobilnego z dostępem do Internetu.\n\n
+5.	W celu korzystani z Aplikacji Mobilnej Klient powinien we własnym zakresie uzyskać dostęp do Urządzenia Mobilnego wyposażonego w system Android minimum 6.0 Marshmallow z dostępem do Internetu i rozdzielczości wyświetlacza minimum 480x800 pikseli.\n\n
 6.	Klient zobowiązany jest w szczególności do:\n\n
 \t\ti.	Niedostarczania i nieprzekazywania treści zabronionych przez przepisy prawa, np. treści propagujących przemoc, zniesławiających lub naruszających dobre osobiste i inne prawa osób trzecich,\n\n
 \t\tii.	Korzystanie z Aplikacji Mobilnej w sposób niezakłócający jego funkcjonowanie, w szczególności poprzez użycie określonego oprogramowania lub urządzeń,\n\n
